--- a/nimegami/manifest.json
+++ b/nimegami/manifest.json
@@ -1,14 +1,14 @@
 {
   "id": "nimegami",
   "name": "NimeGami",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "manifestURI": "https://raw.githubusercontent.com/ilyavea/Extension/refs/heads/main/nimegami/manifest.json",
-  "language": "javascript",
+  "language": "typescript",
   "type": "onlinestream-provider",
   "description": "Nimegami Streaming Provider for Seanime Denshi",
   "author": "Ilyavea",
   "icon": "https://raw.githubusercontent.com/ilyavea/Extension/refs/heads/main/icon/nimegami.png",
   "website": "",
   "lang": "id",
-  "payloadURI": "https://raw.githubusercontent.com/ilyavea/Extension/refs/heads/main/nimegami/provider.js"
+  "payloadURI": "https://raw.githubusercontent.com/ilyavea/Extension/refs/heads/main/nimegami/provider.ts"
 }
